add touchmove event for hiding menu on scroll

--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -19,7 +19,7 @@ header.showen-menu
         li
           a(href="#facades") фасади
         li
-          a(href="#promo") ціни
+          a(href="#prices") ціни
         li
           a(href="#contacts") контакти
   a#main
