--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -141,6 +141,13 @@ block content
           "Виконаний у м.Кам’янець-Подільський"
         )
       +buttonLine
+    a#prices
+    section.prices 
+      h2.sec-title Ціни на виготовлення вивісок 
+      p.sec-desc Бізнес розпочинається з вивіски, та зовнішнього фасаду Вашої комерції, чим краще та вдало вибрано макет у 3D, тим більше клієнт зацікавиться відвідати ваш магазин, аптеку, кав’ярню та ін. Кожному комерційному об’єкту необхідна якісна і красива вивіска та зовнішній вигляд вхідної групи чи фасаду. Часом, коли виникає необхідність купити вивіску, чи оформити комерцію, складно зосередитися в пропозиціях, якими наповнений інтернет. Реклама Поділля пропонує увесь спектр послуг для Вашої комерції, починаючи зовнішнім виглядом, закінчуючи вивіскою та усієї внутрішньої інформації – таблички на дверях, а також паспорт вивіски , вимоги до яких зараз існують.
+      h3.sec-subtitle Ціни виготовлення вивісок залежать від:
+      
+
     //- section.promo 
     //-   b.sec-title акції
     //-   .promo-line.flex-sb 
