add prices section. add some js functional

--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -19,7 +19,7 @@ header.showen-menu
         li
           a(href="#facades") фасади
         li
-          a(href="#prices") ціни
+          a(href="#prices-table") ціни
         li
           a(href="#contacts") контакти
   a#main
