--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -141,13 +141,71 @@ block content
           "Виконаний у м.Кам’янець-Подільський"
         )
       +buttonLine
-    a#prices
+    a#prices-table
     section.prices 
       h2.sec-title Ціни на виготовлення вивісок 
       p.sec-desc Бізнес розпочинається з вивіски, та зовнішнього фасаду Вашої комерції, чим краще та вдало вибрано макет у 3D, тим більше клієнт зацікавиться відвідати ваш магазин, аптеку, кав’ярню та ін. Кожному комерційному об’єкту необхідна якісна і красива вивіска та зовнішній вигляд вхідної групи чи фасаду. Часом, коли виникає необхідність купити вивіску, чи оформити комерцію, складно зосередитися в пропозиціях, якими наповнений інтернет. Реклама Поділля пропонує увесь спектр послуг для Вашої комерції, починаючи зовнішнім виглядом, закінчуючи вивіскою та усієї внутрішньої інформації – таблички на дверях, а також паспорт вивіски , вимоги до яких зараз існують.
-      h3.sec-subtitle Ціни виготовлення вивісок залежать від:
-      
-
+      .dependencies 
+        h3.sec-subtitle Ціни виготовлення вивісок залежать від:
+        ul.components 
+          li розміру
+          li використаних матеріалів
+          li наявності підсвічування, та її якості
+          li складність виготовлення
+          li складність монтажу (зовнішніх робіт).
+      .calculation
+        h3.sec-subtitle Розрахунок
+        p.sec-desc Точний розрахунок буде проведений менеджером, після замірів об’єкту. На сайті також можна оформити попереднє замовлення.
+      .minimal-prices 
+        h3.sec-subtitle Мінімальні ціни на вивіску
+        p.sec-desc Кожен проект має свої особливості – розмір, якість матеріалів та кріплень, наявність підсвідки та багато іншого. Нижче, в таблиці, вказані ціни, що замовляються в Реклама Поділля.
+      table 
+        thead 
+          tr  
+            th Послуга
+            th ціна
+        tbody 
+          tr
+            td Вивіска з пластику ПВХ, 0.5х0.5м
+            td від 300 грн
+          tr
+            td Вивіска композитна 0.5х0.5м
+            td від 470 грн
+          tr
+            td Вивіска у формі коробу 0.5х0.5 м
+            td від 1400 грн
+          tr
+            td Світлова вивіска з прозорого та кольорових акрилів
+            td від 2915 грн
+          tr
+            td Окремостоячі літери несвітлові на фасад чи в приміщення
+            td від 870 грн
+          tr
+            td Літери з гнучкого неону
+            td від 650 грн
+          tr 
+            td.title-cell(colspan="2") ЦІНИ НА ВХІДНУ ГРУПУ
+          tr
+            td Ціни на вхідну групу комерції коливаються від вибраного матеріалу
+            td від 10 000 грн 
+          tr 
+            td.title-cell(colspan="2") ЦІНИ НА ВЕНТИЛЬВАНИЙ ФАСАД
+          tr
+            td Обшивка касетами алюмінієвого композиту 3 мм на направляючому алюмінієвому профілі без утеплення
+            td 3200 грн м<sup>2</sup>
+          tr
+            td Обшивка касетами алюмінієвого композиту 3 мм на направляючому алюмінієвому профілі без утеплення
+            td 4125 грн м<sup>2</sup>
+          tr
+            td Обшивка касетами алюмінієвого композиту 4 мм Г1 на направляючому алюмінієвому профілі без утеплення
+            td 3450 грн м<sup>2</sup>
+          tr
+            td Обшивка касетами алюмінієвого композиту 4 мм Г1 на направляючому алюмінієвому профілі з утепленням
+            td 4300 грн м<sup>2</sup>
+          tr
+            td Обшивка HPL панелями на направляючому алюмінієвому профілі без утеплення
+            td від 5500 грн м<sup>2</sup>
+          
     //- section.promo 
     //-   b.sec-title акції
     //-   .promo-line.flex-sb 
