--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -656,6 +656,53 @@ section
     margin-bottom: 30px 
   
 /* -------------------------------------------------------------------------- */
+/*                                   PRICES                                   */
+/* -------------------------------------------------------------------------- */
+
+.prices 
+  .sec-title 
+    margin-bottom: 60px
+  .sec-subtitle
+    margin-bottom: 30px
+  .sec-desc 
+    margin: 0
+    margin-bottom: 30px
+  .dependencies, 
+  .calculation,
+  .minimal-prices 
+    margin-bottom: 45px
+  table 
+    width: 100% 
+    text-align: left
+    border-collapse: collapse
+    thead 
+      background: $B-P-gradient
+      background-size: 200%
+      color: #fff
+    th:first-child 
+      border-right: 1px solid #fff
+    th:first-child,
+    td:first-child
+      width: 75%
+    th,
+    .title-cell 
+      font-size: 24rem
+      font-weight: 600
+      text-transform: uppercase
+      padding: 15px
+    tr:first-child 
+      td 
+        border-top: none
+    td 
+      font-size: 18rem
+      padding: 10px
+      border: 1px solid #5B5B5B
+    sup
+      font-size: 12rem
+    
+
+
+/* -------------------------------------------------------------------------- */
 /*                                    PROMO                                   */
 /* -------------------------------------------------------------------------- */
 
@@ -883,7 +930,7 @@ address
   .sec-desc 
     p 
       margin-bottom: 10px
-      
+
 .sec-subtitle 
   font-size: 24rem
   font-weight: 600
