--- a/src/sass/components/header.sass
+++ b/src/sass/components/header.sass
@@ -38,6 +38,24 @@ a
   display: flex
   justify-content: space-between
 
+.anim-parent 
+  overflow: hidden
+
+.animation-fade
+  opacity: 0
+
+.animation-left
+  transform: translateX(-300%)
+
+.animation-right 
+  transform: translateX(300%)
+
+.animation-bottom 
+  transform: translateY(150%)
+
+.anim 
+  transition: 2s
+
 /* -------------------------------------------------------------------------- */
 /*                                   header                                   */
 /* -------------------------------------------------------------------------- */
