--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -318,6 +318,10 @@ section
   // width: 100%
   white-space: nowrap
   animation: 30s slide infinite linear
+  @media screen and (max-width: 768px)
+    animation: 40s slide infinite linear
+  @media screen and (max-width: 768px)
+    animation: 40s slide infinite linear
   img 
     margin: 0 40px
   // display: grid
