--- a/src/pug/components/creating.pug
+++ b/src/pug/components/creating.pug
@@ -1,9 +1,9 @@
 a#works
-section.creating 
-  h2.sec-title ВИГОТОВЛЕННЯ ЗОВНІШНЬОЇ РЕКЛАМИ. РОЗРОБКА МОНТАЖ ТА СЕРВІС.
+section.creating.anim-parent 
+  h2.sec-title.anim.animation-fade ВИГОТОВЛЕННЯ ЗОВНІШНЬОЇ РЕКЛАМИ. РОЗРОБКА МОНТАЖ ТА СЕРВІС.
   //- p.make-choice Обрати вид реклами:
   .adv-list-line 
-    ul.adv-examples.flex-sb 
+    ul.adv-examples.flex-sb.anim.animation-fade 
       li.choosen-item(data-btn-name="ll")
         //- light letters
         a(href="#") об'ємні світлові літери
@@ -32,7 +32,7 @@ section.creating
         //- pillars
         a(href="#") штендери. інформаційні щити. вуличні таблички, банери
   .creating-screen.choosen-screen(data-block-name="ll")
-    .fig-list.flex-sb 
+    .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
         "img/ll_bidonchik.jpg",
         "Об’ємні світлові літери для магазину «Бідончик»",
@@ -55,11 +55,11 @@ section.creating
         "Встановлені у м. Дунаївці"
       )
     article.screen-desc 
-      h2.sec-title На даний час об’ємні букви (літери) є одним з найефективнішим видом зовнішньої реклами в багатьох сферах бізнесу.
-      p.sec-desc Їх Об’ємний 3D-Ефект Дає Змогу Значно Краще Привернути Увагу Потенційного Клієнта До Вашої Рекламної Вивіски, Чи Взагалі До Будь-Якої Зовнішньої Реклами. Гарний ефект об’ємні букви (літери), дають при першій комунікації з потенційним клієнтом, адже це підкреслює імідж компанії та її солідність. Також об’ємні рекламні букви (літери) замовляють для проведення весільних, святкових (дні народження, ювілеї, корпоративи) або іміджевих (презентацій, виставка)фотосесій.
+      h2.sec-title.anim.animation-fade На даний час об’ємні букви (літери) є одним з найефективнішим видом зовнішньої реклами в багатьох сферах бізнесу.
+      p.sec-desc.anim.animation-fade Їх Об’ємний 3D-Ефект Дає Змогу Значно Краще Привернути Увагу Потенційного Клієнта До Вашої Рекламної Вивіски, Чи Взагалі До Будь-Якої Зовнішньої Реклами. Гарний ефект об’ємні букви (літери), дають при першій комунікації з потенційним клієнтом, адже це підкреслює імідж компанії та її солідність. Також об’ємні рекламні букви (літери) замовляють для проведення весільних, святкових (дні народження, ювілеї, корпоративи) або іміджевих (презентацій, виставка)фотосесій.
       +buttonLine
   .creating-screen(data-block-name="ls")
-    .fig-list.flex-sb 
+    .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
         "img/ls_amsterdam.jpg",
         "Лайтбокс для студії краси «Амстердам»",
@@ -83,7 +83,7 @@ section.creating
       p.sec-desc Вивіски, лайтбокси з об'ємними літерами – поширений вид візуальних знаків, що застосовуються, як зовні, так і всередині приміщення.
       +buttonLine
   .creating-screen(data-block-name="ns")
-    .fig-list.flex-sb 
+    .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
         "img/ns_1000_dribnyts.JPG",
         "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
@@ -107,7 +107,7 @@ section.creating
       p.sec-desc Характерною рисою є скляна трубка, наповнена газом - неоном.Виготовляють неонові вивіски по засобу нагріву трубки та закачування газу. Після застосування газу - подається висока напруга і трубка випромінює світло. Індивідуальний колірний діапазон досягається внаслідок використання різних і іноді декількох інертних газів.
       +buttonLine
   .creating-screen(data-block-name="vv")
-    .fig-list.flex-sb 
+    .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
         "img/vv_vm_mebli.JPG",
         "Об’ємний козирок для студії дизайну «VM mebli»",
@@ -131,7 +131,7 @@ section.creating
       p.sec-desc На даний час об’ємні козирки є одним з основних елементів комплексу фасадних конструкцій при оформлені будь-якого комерційного приміщення. Також може використовуватись як окремий елемент вхідної групи.
       +buttonLine
   .creating-screen(data-block-name="eg")
-    .fig-list.flex-sb 
+    .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
         "img/eg_como.JPG",
         "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
@@ -155,7 +155,7 @@ section.creating
       p.sec-desc Вхідна група — це комплекс з елементів зовнішньої реклами (світових вивісок, об’ємних та світлових літер, лайтбоксі, чи звичайних вивісок), вітрин поклеєні плівкою, підсвітки, та обшивка фасаду алюмінієвими панелями та іншими якісними матеріалами.
       +buttonLine
   .creating-screen(data-block-name="sc")
-    .fig-list.flex-sb 
+    .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
         "img/sc_chiken.jpg",
         "Магазин «Grilled Chicken»",
@@ -179,7 +179,7 @@ section.creating
       p.sec-desc Вартість наклеювання складає 350 грн за метр квадратний. Для більш детальною інформацією зверніться до наших менеджерів.Консультації, заміри, розрахунки безкоштовні.Працюємо з юридичними та фізичними особами. Надаємо всі фінансові та супровідні документи.
       +buttonLine
   .creating-screen(data-block-name="pl")
-    .fig-list.flex-sb 
+    .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
         "img/pl_forward_bank.JPG",
         "Інформаційний щит для «Forward Bank»",
