add animations on main page

--- a/src/pug/components/creating.pug
+++ b/src/pug/components/creating.pug
@@ -32,7 +32,7 @@ section.creating.anim-parent
         //- pillars
         a(href="#") штендери. інформаційні щити. вуличні таблички, банери
   .creating-screen.choosen-screen(data-block-name="ll")
-    .fig-list.flex-sb.anim.animation-fade 
+    .fig-list.flex-sb.anim.animation-bottom 
       +creatingFigure(
         "img/ll_bidonchik.jpg",
         "Об’ємні світлові літери для магазину «Бідончик»",
