--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -118,7 +118,7 @@ block content
       .sec-desc.anim.animation-fade
         p Вентильовані фасади – сучасний метод оформлення фасадів будівель та приміщень, які дозволяють значно покращити як естетичний вигляд будівель, так і його звуко та термоізоляцію.
         p Вентильовані фасади будівель, чи навісний фасад – система, що складається з облицювальних матеріалів, (алюмінієві композитні панелі) які кріпляться на каркас зі сталі нержавійки чи цинкування, або алюмінієвий каркас опорної стіни чи моноліту. Основною відмінністю та перевагою вентильованого фасаду – циркуляція повітря між облицювальною панеллю та стіною. Це дозволяє прибрати вологу та конденсат з конструкції.
-      .fig-list.flex-sb.anim.animation-fade 
+      .fig-list.flex-sb.anim.animation-bottom 
         +creatingFigure(
           "img/vf_veloman.jpg",
           "Вентильований фасад для компанії «VELOMAN»",
