Text errors fix, change some figures

--- a/src/pug/components/creating.pug
+++ b/src/pug/components/creating.pug
@@ -55,8 +55,8 @@ section.creating.anim-parent
         "Встановлені у м. Дунаївці"
       )
     article.screen-desc 
-      h2.sec-title.anim.animation-fade На даний час об’ємні букви (літери) є одним з найефективнішим видом зовнішньої реклами в багатьох сферах бізнесу.
-      p.sec-desc.anim.animation-fade Їх Об’ємний 3D-Ефект Дає Змогу Значно Краще Привернути Увагу Потенційного Клієнта До Вашої Рекламної Вивіски, Чи Взагалі До Будь-Якої Зовнішньої Реклами. Гарний ефект об’ємні букви (літери), дають при першій комунікації з потенційним клієнтом, адже це підкреслює імідж компанії та її солідність. Також об’ємні рекламні букви (літери) замовляють для проведення весільних, святкових (дні народження, ювілеї, корпоративи) або іміджевих (презентацій, виставка)фотосесій.
+      h2.sec-title.anim.animation-fade На даний час об’ємні букви (літери) є одним з найефективніших видів зовнішньої реклами в багатьох сферах бізнесу.
+      p.sec-desc.anim.animation-fade Їх Об’ємний 3D-Ефект Дає Змогу Значно Краще Привернути Увагу Потенційного Клієнта До Вашої Рекламної Вивіски, Чи Взагалі До Будь-Якої Зовнішньої Реклами. Гарний ефект об’ємні букви (літери), дають при першій комунікації з потенційним клієнтом, адже це підкреслює імідж компанії та її солідність. Також об’ємні рекламні букви (літери) замовляють для проведення весільних, святкових (дні народження, ювілеї, корпоративи) або іміджевих (презентації, виставки) фотосесій.
       +buttonLine
   .creating-screen(data-block-name="ls")
     .fig-list.flex-sb.anim.animation-fade 
@@ -91,13 +91,13 @@ section.creating.anim-parent
         "Виготовлена з високоякісної діодної стрічки помаранчевого кольору, що надає вивісці неперевершений вигляд у темну пору, та привертає увагу покупців, чудово підійде для магазинів, торгових точок, вітрин, оформлення кімнати."
       )
       +creatingFigure(
-        "img/ns_reiestratura.jpg",
+        "img/ns_cukernia_potockhyh.png",
         "Неонова вивіска для «Цукерні Потоцьких»",
         "Неонова вивіска для «Цукерні Потоцьких»",
         "Виготовлена зі скляної трубки, яка наповнена інертним газом, виглядає стримано та кидається в очі відвідувачам, при встановлені використали композитну панель, чудово вписується в інтер’єр закладу."
       )
       +creatingFigure(
-        "img/ns_cukernia_potockhyh.png",
+        "img/ns_reiestratura.jpg",
         "Вивіска для міської лікарні «Реєстратура»",
         "Вивіска для міської лікарні «Реєстратура»",
         "Літери зроблені з ефектом контражуру, освітлюються зсередини, що надає їм чарівної гри світла та тіні, на задній частині дерев’яної панелі встановлено діодну стрічку, що додає контурного вигляду."
@@ -133,22 +133,22 @@ section.creating.anim-parent
   .creating-screen(data-block-name="eg")
     .fig-list.flex-sb.anim.animation-fade 
       +creatingFigure(
-        "img/eg_como.JPG",
-        "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
-        "Неонова вивіска для магазину «1000 ДРІБНИЦЬ»",
-        "Виготовлена з високоякісної діодної стрічки помаранчевого кольору, що надає вивісці неперевершений вигляд у темну пору, та привертає увагу покупців, чудово підійде для магазинів, торгових точок, вітрин, оформлення кімнати."
+        "img/eg_bubbles.jpg",
+        "Вхідна група",
+        "Вхідна група",
+        "Вхідна група вашої комерції, це не тільки для приміщення, такою красотою можна оздобити ваші ворота при вході у ресторан, чи ресторанно-готельний комплекс. Наші дизайнери попрацюють з макетами у 3D, та допожуть оздобити вашу комерцію."
       )
       +creatingFigure(
-        "img/eg_parmezan.JPG",
-        "Lorem ipsum dolor sit amet.",
-        "Lorem ipsum dolor sit amet.",
-        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam quo soluta corrupti sint odio aliquid."
+        "img/eg_annamoda.jpg",
+        "Вхідна група у місті Шепетівка",
+        "Вхідна група у місті Шепетівка",
+        "Вхідна група у місті Шепетівка, хороший вибір, вдалий макет, гарна робота. Реклама Поділля готова втілити Ваше бажання в життя! Ми попередньо попрацюємо у 3D над Вашою вхідною групою, так, щоб Ви могли уявити та побачити свою комерцію на яву"
       )
       +creatingFigure(
-        "img/eg_nadin.JPG",
-        "Lorem ipsum dolor sit amet.",
-        "Lorem ipsum dolor sit amet.",
-        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam quo soluta corrupti sint odio aliquid."
+        "img/eg_sport_medicina.jpg",
+        "Вхідна група",
+        "Вхідна група",
+        "Саме з зовнішнього вигляду Вашої комерції розпочинається бізнес. Вхідна група, яку Ви бажаєте бачити на своїй комерції, допоможе звернути увагу клієнта, так щоб відвідали ваш магазин, чи приватну клініку, чи аптеку. Наші дизайнери допоможуть Вам втілити в життя побажання та задумку, як саме має виглядати Ваша комерція. Саме макет у 3D, допоможе уявити вхідну групу"
       )      
     article.screen-desc 
       h2.sec-title ВХІДНА ГРУПА. КОМПЛЕКС ЕЛЕМЕНТІВ ЗОВНІШНЬОЇ РЕКЛАМИ.
