--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -37,7 +37,7 @@ block content
         +preference(
           'Вигідні ціни',
           'Ми підібрали найдоступніші ціни на вивіски, світлові, фігурні, двосторонні лайтбокси (світловий короб), що дозволять, при цьому, отримати високоякісну зовнішню рекламу розроблену нашими фахівцями.',
-          'Також повноцінну гарантію, всі відповідні дозволи та фінансові документи. Постійне сервісне обслуговування. Наш, майже двадцятирічний досвід у сфері зовнішньої реклами з впевненістю дозволяє гарантувати це!'
+          'Також надамо повноцінну гарантію, оформимо всі відповідні дозволи та фінансові документи, забезепечимо постійне сервісне обслуговування. Наш, майже двадцятирічний досвід у сфері зовнішньої реклами з впевненістю дозволяє гарантувати це!'
         )
           <svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 111 111" id="prices">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M55.5 3C26.5051 3 3 26.5051 3 55.5C3 84.4949 26.5051 108 55.5 108C84.4949 108 108 84.4949 108 55.5C108 26.5051 84.4949 3 55.5 3ZM0 55.5C0 24.8482 24.8482 0 55.5 0C86.1518 0 111 24.8482 111 55.5C111 86.1518 86.1518 111 55.5 111C24.8482 111 0 86.1518 0 55.5Z" fill="white"></path>
@@ -45,7 +45,7 @@ block content
           </svg>
         +preference(
           'великий спектр послуг',
-          'Виготовлення вивіски, лайтбокса, об’ємних літр та загалом зовнішньої реклами в цілому – кропіткий, багатоетапний процес, який в змозі виконати правильно тільки справжні професіонали. Зовнішня реклама – це різноманітність конструкцій, видів і технологій будь-якої складності – лайтбокси, світлові вивіски та світлові букви різного розміру, шрифту, способу підсвітки.',
+          'Виготовлення вивіски, лайтбокса, об’ємних літер та загалом зовнішньої реклами в цілому – кропіткий, багатоетапний процес, який в змозі виконати правильно тільки справжні професіонали. Зовнішня реклама – це різноманітність конструкцій, видів і технологій будь-якої складності – лайтбокси, світлові вивіски та світлові букви різного розміру, шрифту, способу підсвітки.',
           'Також ми пропонуємо  оформлення фасаду комерційного приміщення.'
         )
           <svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 114 110" id="services">
@@ -83,15 +83,15 @@ block content
         h2.sec-title МИ ГОТОВІ НАДАТИ ВАМ ПОСЛУГИ В НАСТУПНИХ НАПРЯМКАХ: 
         +service(
           'ДИЗАЙН І ПРОЄКТУВАННЯ ЯК ВАЖЛИВИЙ ЕТАП ВИГОТОВЛЕННЯ ЗОВНІШНЬОЇ РЕКЛАМИ.',
-          'Професійні дизайнери нашої компанії створять макет за допомогою засобів 3D - візуалізації, що дасть змогу чітко зрозуміти, який саме зовнішній вигляд буде мати ваша вивіска, лайтбокс, банер чи будівля. Дизайн і проєктування співпрацюють один з одним, працюючи рука в руку, для досягнення успішного результату. Дизайн визначає зовнішній вигляд і функціональність, а проєктування перетворює ці ідеї у практичні плани та реалізовує їх на практиці.'
+          'Професійні дизайнери нашої компанії створять макет за допомогою засобів 3D - візуалізації, що дасть змогу чітко зрозуміти, який саме зовнішній вигляд буде мати ваша вивіска, лайтбокс, банер чи будівля. Дизайн і проєктування взаємодіють один з одним, працюючи рука в руку, для досягнення успішного результату. Дизайн визначає зовнішній вигляд і функціональність, а проєктування перетворює ці ідеї у практичні плани та реалізовує їх на практиці.'
         )
         +service(
           'ОБСЛУГОВУВАННЯ ТА РЕМОНТ ВИВІСОК, ЗОВНІШНЬОЇ СВІТЛОВОЇ РЕКЛАМИ.',
           'На кожен наш виріб ми надаємо гарантійний період! Також наша компанія виконує професійне обслуговування і ремонт вивісок, реставрацію об’ємних літер, заміну та ремонт системи освітлення, демонтаж старих вивісок. Обслуговування та ремонт зовнішньої реклами є важливими аспектами забезпечення ефективності та тривалості рекламних конструкцій.'
         )
         +service(
-          'РЕЄСТРАЦІЯ РЕКЛАМНИХ КОНСТРУКЦІЙ.',
-          'Реєстрація об’єктів зовнішньої реклами, так само як і виготовлення – клопітка та обтяжлива робота, що вимагає певних знань і навичок. Фахівці нашої компанії допоможуть отримати всю необхідну дозвільну документацію для легального функціонування ваших вивісок, лайт-боксів та інших рекламних конструкцій.'
+          'ВИГОТОВЛЕННЯ ДОЗВІЛЬНОЇ ДОКУМЕНТАЦІЇ ( ПАСПОРТ ВИВІСКИ )',
+          'Реєстрація об’єктів зовнішньої реклами, так само як і виготовлення – клопітка та обтяжлива робота, що вимагає певних знань і навичок. Фахівці нашої компанії виготовлять всю необхідну дозвільну документацію, паспорт вивіски, для легального функціонування ваших вивісок, лайт-боксів та інших рекламних конструкцій.'
         )
         +service(
           'АРХІТЕКТУРНЕ ПІДСВІЧУВАННЯ.',
@@ -116,35 +116,33 @@ block content
     section.facades.anim-parent 
       h2.sec-title.anim.animation-fade ВЕНТИЛЬОВАНІ ФАСАДИ (МОНТАЖ) СИСТЕМИ З АЛЮМІНІЄВОГО КОМПОЗИТУ.
       .sec-desc.anim.animation-fade
-        p Вентильовані фасади – сучасний метод оформлення фасадів будівель та приміщень, які дозволяють значно покращити як естетичний вигляд будівель, так і його звуко та термоізоляцію.
+        p Вентильовані фасади – сучасний метод оформлення фасадів будівель та приміщень, які дозволяють значно покращити як естетичний вигляд будівель, так і його звуко- та термоізоляцію.
         p Вентильовані фасади будівель, чи навісний фасад – система, що складається з облицювальних матеріалів, (алюмінієві композитні панелі) які кріпляться на каркас зі сталі нержавійки чи цинкування, або алюмінієвий каркас опорної стіни чи моноліту. Основною відмінністю та перевагою вентильованого фасаду – циркуляція повітря між облицювальною панеллю та стіною. Це дозволяє прибрати вологу та конденсат з конструкції.
       .fig-list.flex-sb.anim.animation-bottom 
         +creatingFigure(
           "img/vf_veloman.jpg",
           "Вентильований фасад для компанії «VELOMAN»",
           "Вентильований фасад для компанії «VELOMAN»",
-          "Виготовлений з надміцних HPL-панелей, в колір дерев’яної палітри, що комбінується з чорним матовим композитом, сучасний стриманий стиль.", 
+          "Вентильований фасад виконаний з HPL Fundermaxs панелей на любий смак, кольорова гама сягає до 300 одиниць. під колір каменю, дерева, однотонні по каталогу. Вся обшивка кріпиться на алюмінієву підсистему. В літній час на клейову основу, зимовий час на саморізи в колір панелі. Також фасад можна втеплити від 50 до 200 мм. мінеральною ватою. Гарантія на матеріали виробник надає 50 років", 
           "м.Кам’янець-Подільський"
         )
         +creatingFigure(
-          "img/vf_composit.png",
+          "img/vf_center.jpg",
           "Вентильований композитний фасад",
           "Вентильований композитний фасад",
-          "Замовлення виконане з графітового композиту, в проект входило утеплення скловатою, та шар вітробар’єру, для захисту будівлі від зовнішніх чинників.",
-          "м.Шепетівка"
+          "Обшивка приміщення вентильованого фасаду під  замовлення, панелями алюмінієвого композиту 3 мм. товщиною на алюмінієвій підсистемі. з утепленням мінеральної вати"
         )
         +creatingFigure(
-          "img/vf_bubbles.jpg",
+          "img/vf_right.jpg",
           "Вентильований фасад для готелю «BUBBLES»",
           "Вентильований фасад для готелю «BUBBLES»",
-          "Комплексне замовлення з елементами вентильованого фасаду темно-сірого забарвлення, та світловими літерами, які розташовуються над прохідною.",
-          "Виконаний у м.Кам’янець-Подільський"
+          "Обшивка приміщення касетами алюмінієвого композиту 4 мм Г1  по класу негорючості , вмонтоване на алюмінієвій підсистемі, з утепленням мінеральної вати від 50 до 150 мм"
         )
       +buttonLine
     a#prices-table
     section.prices.anim-parent 
       h2.sec-title.anim.animation-fade Ціни на виготовлення вивісок 
-      p.sec-desc.anim.animation-fade Бізнес розпочинається з вивіски, та зовнішнього фасаду Вашої комерції, чим краще та вдало вибрано макет у 3D, тим більше клієнт зацікавиться відвідати ваш магазин, аптеку, кав’ярню та ін. Кожному комерційному об’єкту необхідна якісна і красива вивіска та зовнішній вигляд вхідної групи чи фасаду. Часом, коли виникає необхідність купити вивіску, чи оформити комерцію, складно зосередитися в пропозиціях, якими наповнений інтернет. Реклама Поділля пропонує увесь спектр послуг для Вашої комерції, починаючи зовнішнім виглядом, закінчуючи вивіскою та усієї внутрішньої інформації – таблички на дверях, а також паспорт вивіски , вимоги до яких зараз існують.
+      p.sec-desc.anim.animation-fade Бізнес розпочинається з вивіски, та зовнішнього фасаду Вашої комерції. Чим краще та вдало вибрано макет у 3D, тим більше клієнт зацікавиться відвідати ваш магазин, аптеку, кав’ярню та ін. Кожному комерційному об’єкту необхідна якісна і красива вивіска та зовнішній вигляд вхідної групи чи фасаду. Часом, коли виникає необхідність купити вивіску, чи оформити комерцію, складно зосередитися в пропозиціях, якими наповнений інтернет. Реклама Поділля пропонує увесь спектр послуг для Вашої комерції, починаючи із зовнішнього вигляду, закінчуючи вивіскою та усією внутрішньою інформацією – таблички на дверях, а також паспорт вивіски, вимоги до яких зараз існують.
       .dependencies.anim.animation-fade 
         h3.sec-subtitle Ціни виготовлення вивісок залежать від:
         ul.components 
@@ -194,7 +192,7 @@ block content
             td Обшивка касетами алюмінієвого композиту 3 мм на направляючому алюмінієвому профілі без утеплення
             td 3200 грн м<sup>2</sup>
           tr
-            td Обшивка касетами алюмінієвого композиту 3 мм на направляючому алюмінієвому профілі без утеплення
+            td Обшивка касетами алюмінієвого композиту 3 мм на направляючому алюмінієвому профілі з утепленням
             td 4125 грн м<sup>2</sup>
           tr
             td Обшивка касетами алюмінієвого композиту 4 мм Г1 на направляючому алюмінієвому профілі без утеплення
