--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -590,7 +590,8 @@ section
   border-radius: 5px
   width: max-content
 
-.fig-list
+.fig-list,
+.examples-line
   align-items: stretch
   column-gap: 20px
   margin-bottom: 30px
@@ -617,6 +618,7 @@ section
     display: block
     height: 2px
     margin: 15px 0
+.fig-list
   @media screen and ( max-width: 768px )
     flex-wrap: wrap
     justify-content: center
@@ -679,7 +681,7 @@ section
     width: 100% 
     text-align: left
     border-collapse: collapse
-    thead 
+    thead tr
       background: $B-P-gradient
       background-size: 200%
       color: #fff
@@ -973,13 +975,64 @@ address
 .examples-line 
   display: flex 
   gap: 0
-  overflow-x: scroll
-  margin: 0 -10px 30px
+  overflow-x: hidden
+  margin-bottom: 30px
+  scroll-behavior: smooth
   &::-webkit-scrollbar,
   &::-webkit-scrollbar-thumb,
   &::-webkit-scrollbar-track
     display: none
   figure 
-    flex: 0 0 33.333%
+    flex: 0 0 33.33333%
     padding: 0 10px
-    
+    @media screen and ( max-width: 1000px )
+      flex: 0 0 50%
+    @media screen and ( max-width: 600px )
+      flex: 0 0 100%
+
+.fig-slider 
+  position: relative
+  &:hover 
+    .arr-left,
+    .arr-right
+      opacity: 1
+  .arr-left,
+  .arr-right
+    opacity: 0
+    position: absolute 
+    width: 10%
+    height: 100%
+    top: 0
+    transition: $trs
+    @media screen and ( max-width: 600px )
+      width: 20%
+    &::before
+      content: ''
+      position: absolute
+      width: 20px
+      height: 20px
+      border: 2px solid #999
+      border-top: none
+      border-right: none
+      top: 50%
+      transition: $trs
+  .arr-left
+    left: 0
+    &:before 
+      transform: rotate(45deg)
+      left: 30%
+    &:hover 
+      cursor: pointer
+      &::before
+        transform: scale(1.4) rotate(45deg)
+        border-color: #fff
+  .arr-right
+    right: 0
+    &:before 
+      transform: rotate(-135deg)
+      right: 30%
+    &:hover 
+      cursor: pointer
+      &::before
+        transform: scale(1.2) rotate(-135deg)
+        border-color: #fff
