Text errors fix, change some figures

--- a/src/pug/components/creating.pug
+++ b/src/pug/components/creating.pug
@@ -145,7 +145,7 @@ section.creating.anim-parent
         "Вхідна група у місті Шепетівка, хороший вибір, вдалий макет, гарна робота. Реклама Поділля готова втілити Ваше бажання в життя! Ми попередньо попрацюємо у 3D над Вашою вхідною групою, так, щоб Ви могли уявити та побачити свою комерцію на яву"
       )
       +creatingFigure(
-        "img/eg_sport_medicina.jpg",
+        "img/eg_sport_medicine.jpg",
         "Вхідна група",
         "Вхідна група",
         "Саме з зовнішнього вигляду Вашої комерції розпочинається бізнес. Вхідна група, яку Ви бажаєте бачити на своїй комерції, допоможе звернути увагу клієнта, так щоб відвідали ваш магазин, чи приватну клініку, чи аптеку. Наші дизайнери допоможуть Вам втілити в життя побажання та задумку, як саме має виглядати Ваша комерція. Саме макет у 3D, допоможе уявити вхідну групу"
