Php mail sender

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -632,6 +632,15 @@ section
     figure 
       width: 100%
 
+.fig-popup-bg 
+  position: fixed 
+  top: 0
+  left: 0
+  width: 100vw
+  height: 100vh
+  background-color: rgba(0, 0, 0, .7)
+  z-index: 10
+
 .g-line 
   width: 100%
   background: $itemLine
