--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -233,7 +233,7 @@ block content
     section.contacts.anim-parent 
       b.sec-title.anim.animation-fade контакти
       .flex-sb
-        form.half.anim.animation-left(action="#" method="POST")  
+        form.half.anim.animation-left(action="index.php" method="POST")  
           a#contacts
           p.order замовити послугу
           .inputs 
