--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -134,9 +134,9 @@ block content
         )
         +creatingFigure(
           "img/vf_right.jpg",
-          "Вентильований фасад для готелю «BUBBLES»",
-          "Вентильований фасад для готелю «BUBBLES»",
-          "Обшивка приміщення касетами алюмінієвого композиту 4 мм Г1  по класу негорючості , вмонтоване на алюмінієвій підсистемі, з утепленням мінеральної вати від 50 до 150 мм"
+          "Вентильований фасад для «BUBBLES»",
+          "Вентильований фасад для «BUBBLES»",
+          "Обшивка приміщення касетами алюмінієвого композиту 4 мм Г 1  по класу негорючості , вмонтоване на алюмінієвій підсистемі, з утепленням мінеральної вати від 50 до 150 мм"
         )
       +buttonLine
     a#prices-table
