Add page for confirmation successful mail sending

--- a/src/pug/components/header.pug
+++ b/src/pug/components/header.pug
@@ -11,16 +11,16 @@ header.showen-menu
         span
       ul.flex-sb 
         li
-          a.scroll-btn(href="#about-us") про нас
+          a.scroll-btn(href="index.html#about-us") про нас
         li
-          a.scroll-btn(href="#service") послуги
+          a.scroll-btn(href="index.html#service") послуги
         li
-          a.scroll-btn(href="#works") Наші роботи
+          a.scroll-btn(href="index.html#works") Наші роботи
         li
-          a.scroll-btn(href="#facades") фасади
+          a.scroll-btn(href="index.html#facades") фасади
         li
-          a.scroll-btn(href="#prices-table") ціни
+          a.scroll-btn(href="index.html#prices-table") ціни
         li
-          a.scroll-btn(href="#contacts") контакти
+          a.scroll-btn(href="index.html#contacts") контакти
   a#main
     
