--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -677,6 +677,37 @@ section
   background-color: rgba(0, 0, 0, .7)
   z-index: 11
 
+.close-btn
+  position: fixed 
+  top: calc( 5vh + 20px )
+  right: calc( 7vw + 20px )
+  z-index: 13
+  width: 40px
+  height: 40px
+  &:before,
+  &:after 
+    content: ''
+    position: absolute
+    top: 18px
+    left: 0
+    width: 100%
+    height: 5px
+    background: $primaryBlue 
+    border-radius: 2px
+    z-index: 13
+    transition: $trs
+  &::before
+    transform: rotate(-45deg)
+  &::after
+    transform: rotate(45deg)
+  &:hover
+    &:before
+      background: $textTButton
+      transform: rotate(-45deg) scale(1.1)
+    &:after 
+      background: $textTButton
+      transform: rotate(45deg) scale(1.1)
+
 .g-line 
   width: 100%
   background: $itemLine
