--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -641,7 +641,6 @@ section
       @media screen and ( max-width: 600px )
         max-height: calc(90vh - 20px)
 
-
   figcaption 
     p 
       font-size: 14rem
@@ -679,8 +678,8 @@ section
 
 .close-btn
   position: fixed 
-  top: calc( 5vh + 20px )
-  right: calc( 7vw + 20px )
+  top: 20px
+  right: 20px
   z-index: 13
   width: 40px
   height: 40px
@@ -1012,6 +1011,9 @@ address
   .sec-desc 
     p 
       margin-bottom: 10px
+  figure.active-figure 
+    figcaption 
+      display: block
 
 .sec-subtitle 
   font-size: 24rem
