--- a/src/pug/panel_sign.pug
+++ b/src/pug/panel_sign.pug
@@ -27,55 +27,30 @@ block content
               - 
                 var items = [
                   {
-                    src: "img/ps_chameleon.jpg", 
-                    title: "Вивіска для компанії “chameleon”", 
-                    price: "???", 
-                    height: "30 СМ"
-                  },
-                  {
-                    src: "img/ps_marketok.jpg", 
-                    title: "Вивіска для компанії “chameleon”", 
-                    price: "???", 
-                    height: "30 СМ"
-                  },
-                  {
-                    src: "img/ps_medtehnika.jpg", 
-                    title: "Вивіска для компанії “chameleon”", 
-                    price: "???", 
-                    height: "30 СМ"
-                  },
-                  {
-                    src: "img/ps_milamed.jpg", 
-                    title: "Вивіска для компанії “chameleon”", 
-                    price: "???", 
-                    height: "30 СМ"
-                  },
-                  {
-                    src: "img/ps_medmagazin.jpg", 
-                    title: "Вивіска для компанії “chameleon”", 
-                    price: "???", 
-                    height: "30 СМ"
+                    src: "img/ps_technoprostir.jpg", 
+                    title: "Вивіска для компанії “chameleon”"
                   },
                   {
                     src: "img/ps_technoprostir.jpg", 
-                    title: "Вивіска для компанії “chameleon”", 
-                    price: "???", 
-                    height: "30 СМ"
+                    title: "Вивіска для компанії “chameleon”"
                   },
                   {
                     src: "img/ps_technoprostir.jpg", 
-                    title: "Вивіска для компанії “chameleon”", 
-                    price: "???", 
-                    height: "30 СМ"
+                    title: "Вивіска для компанії “chameleon”"
+                  },
+                  {
+                    src: "img/ps_technoprostir.jpg", 
+                    title: "Вивіска для компанії “chameleon”"
+                  },
+                  {
+                    src: "img/ps_technoprostir.jpg", 
+                    title: "Вивіска для компанії “chameleon”"
                   },
                 ]
               each i in items 
-                +creatingFigure(
+                +pageFigure(
                   i.src,
-                  i.title,
-                  i.title,
-                  i.price,
-                  i.height
+                  i.title
                 )
             .button-line
               +button('g', 'index.html#contacts', 'Замовити')  
