--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -5,7 +5,7 @@ footer
         h2 <b>реклама</b> Поділля
         p Розробки та виготовлення зовнішньої реклами
       +soc-line 
-      a.policy(href="#") політика конфіденційності 
+      a.policy(href="policy.html") політика конфіденційності 
     p.copy 
       +svg('#copy')
       span copyright by “РЕКЛАМА ПОДІЛЛЯ”
