--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -907,6 +907,7 @@ section
       font-weight: 400
   input:not([type=checkbox]),
   textarea 
+
     display: inline-block 
     width: 100%
     padding: 9px 18px
@@ -917,6 +918,7 @@ section
       outline: none 
       border: 1px solid $primaryBlue
   textarea 
+    font-family: Montserrat,sans-serif
     resize: vertical
     max-height: 110px
     padding: 10px
@@ -1132,3 +1134,23 @@ address
   align-items: center
   text-align: center
   row-gap: 30px 
+
+.error 
+  color: red
+
+/* -------------------------------------------------------------------------- */
+/*                                 POLICY PAGE                                */
+/* -------------------------------------------------------------------------- */
+
+section.policy-page 
+  padding: 50px 0
+  .sec-title 
+    text-align: center
+    margin-bottom: 25px
+  .sec-subtitle 
+    display: inline-block
+    margin: 20px 0
+  div 
+    margin-bottom: 30px
+  p
+    margin-bottom: 10px
